--- a/source/index.html
+++ b/source/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -27,7 +27,7 @@
             </button>
         </nav>
         <a class="header-page__logo" href="index.html">
-            <img class="header-page__logo--image" src="logo.jpg" alt="Изображение логотипа Sedona" width="50px" height="50px">
+            <img class="header-page__logo--image" src="logo.jpg" alt="Изображение логотипа Sedona" width="50" height="50">
         </a>
         <h1 class="header-page__title-index">
             Седона - небольшой городок в Аризоне, заслуживающий большего!
@@ -46,7 +46,7 @@
                         <span class="advantage-1__number">--№1--</span>
                         <p>Седона не аттракцион для туристов, в нем течет своя жизнь</p>
                     </div>
-                    <img src="image.jpg" alt="Фото города" width="50px" height="50px">
+                    <img src="image.jpg" alt="Фото города" width="50" height="50">
                     <ul class="advantage-1__list feature-list">
                         <li class="feature-list__item">
                             <h3 class="feature-list__title">Жилье</h3>
@@ -69,7 +69,7 @@
 
                         <p class="advantage-2__paragraph">Да, по нему можно пройти! Если вы оселитесь, конечно</p>
                     </div>
-                    <img class="advantage-2__image" src="Каньон.jpg" alt="фотография каньона" width="50px" height="50px">
+                    <img class="advantage-2__image" src="Каньон.jpg" alt="фотография каньона" width="50" height="50">
                 </li>
                 <li class="advantage-list__item advantage-3">
                     <h2 class="advantage-3__title">Небольшая площадь</h2>
@@ -93,7 +93,7 @@
                 <a class="find-hotel__button" href="find-hotel.html">Найти гостиницу</a>
             </div>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d456713.36206752557!2d-112.08681527711245!3d34.91377402507952!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1563191067139!5m2!1sru!2sru"
-                width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                width="600" height="450" style="border:0" allowfullscreen></iframe>
         </section>
     </main>
 
