--- a/source/form.html
+++ b/source/form.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -27,7 +27,7 @@
             </button>
         </nav>
         <a class="header-page__logo" href="index.html">
-            <img class="header-page__logo--image" src="logo.jpg" alt="Изображение логотипа Sedona" width="50px" height="50px">
+            <img class="header-page__logo--image" src="logo.jpg" alt="Изображение логотипа Sedona" width="50" height="50">
         </a>
         <h1 class="header-page__title-form">
             Оставьте свой отзыв
@@ -69,6 +69,7 @@
                         <label class="form-contacts__label" for="email">Контактный телефон*:</label>
                         <input class="form-contacts__input" id="email" type="email" placeholder="Введите e-mail" required>
                     </li>
+                </ul>
             </fieldset>
             <fieldset class="form-block__rating form-rating">
                 <h2 class="form-rating__title">
