--- a/source/photo.html
+++ b/source/photo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -27,7 +27,7 @@
             </button>
         </nav>
         <a class="header-page__logo" href="index.html">
-            <img class="header-page__logo--image" src="logo.jpg" alt="Изображение логотипа Sedona" width="50px" height="50px">
+            <img class="header-page__logo--image" src="logo.jpg" alt="Изображение логотипа Sedona" width="50" height="50">
         </a>
         <h1 class="header-page__title-form">
             Фото и видео
@@ -42,7 +42,7 @@
             <ul class="gallery-page__list photo-list">
                 <li class="photo-list__item">
                     <a class="photo-list__link" href="1-фото.jpg" aria-label="Ссылка по полное изображение">
-                        <img class="photo-list__link--image" src="фото-1.jpg" alt="Фотография - Неродные просторы" width="100px" height="100px">
+                        <img class="photo-list__link--image" src="фото-1.jpg" alt="Фотография - Неродные просторы" width="100" height="100">
                     </a>
                     <h2 class="photo-list__title">Неродные просторы</h2>
                     <p class="photo-list__author">
@@ -52,7 +52,7 @@
                 </li>
                 <li class="photo-list__item">
                     <a class="photo-list__link" href="2-фото.jpg" aria-label="Ссылка по полное изображение">
-                        <img class="photo-list__link--image" src="фото-1.jpg" alt="Фотография - Местная растительность" width="100px" height="100px">
+                        <img class="photo-list__link--image" src="фото-1.jpg" alt="Фотография - Местная растительность" width="100" height="100">
                     </a>
                     <h2 class="photo-list__title">Местная растительность</h2>
                     <p class="photo-list__author">
@@ -62,7 +62,7 @@
                 </li>
                 <li class="photo-list__item">
                     <a class="photo-list__link" href="3-фото.jpg" aria-label="Ссылка по полное изображение">
-                        <img class="photo-list__link--image" src="фото-1.jpg" alt="Фотография - Дорога на север" width="100px" height="100px">
+                        <img class="photo-list__link--image" src="фото-1.jpg" alt="Фотография - Дорога на север" width="100" height="100">
                     </a>
                     <h2 class="photo-list__title">Дорога на север</h2>
                     <p class="photo-list__author">
@@ -72,7 +72,7 @@
                 </li>
                 <li class="photo-list__item">
                     <a class="photo-list__link" href="4-фото.jpg" aria-label="Ссылка по полное изображение">
-                        <img class="photo-list__link--image" src="фото-1.jpg" alt="Фотография - Мост Дьявола" width="100px" height="100px">
+                        <img class="photo-list__link--image" src="фото-1.jpg" alt="Фотография - Мост Дьявола" width="100" height="100">
                     </a>
                     <h2 class="photo-list__title">Мост Дьявола</h2>
                     <p class="photo-list__author">
