исправил ошибки в шапке и подвале, как на главной. нижний див заменил на филдсет, переименовал классы внутри формы и задал новые, возможно что-то еще упустил

--- a/source/form.html
+++ b/source/form.html
@@ -8,51 +8,53 @@
 
 <body>
     <header class="header-page">
-        <nav class="nav-mein">
-            <ul class="nav-main__list nav-list">
-                <li class="site-list__item">
-                    <a href="#">главная</a>
+        <nav class="nav-main">
+            <ul class="nav-main__list navigation list">
+                <li class="navigation__item">
+                    <a class="navigation__link" href="#">главная</a>
                 </li>
-                <li class="site-list__item">
-                    <a href="#">фото и видео</a>
+                <li class="navigation__item">
+                    <a class="navigation__link" href="#">фото и видео</a>
                 </li>
-                <li class="site-list__item">
-                    <a href="#">форма отзыва</a>
+                <li class="navigation__item">
+                    <a class="navigation__link" href="#">форма отзыва</a>
                 </li>
-                <li class="site-list__item">
-                    <a href="#">html academy</a>
+                <li class="navigation__item">
+                    <a class="navigation__link" href="#">html academy</a>
                 </li>
             </ul>
-            <button class="nav-mein__button">
+            <button class="nav-main__button">
             </button>
+            <a>
+                <img class="nav-main__logo header-logo" src="main-logo.jpg" alt="Изображение логотипа Sedona" width="50" height="50">
+            </a>
         </nav>
-        <a class="header-page__logo" href="index.html">
-            <img class="header-page__logo--image" src="logo.jpg" alt="Изображение логотипа Sedona" width="50" height="50">
-        </a>
-        <h1 class="header-page__title-form">
-            Оставьте свой отзыв
-        </h1>
-        <p class="header-page__paragraph-form">
-            Помогите нашим отелям стать лучше! Оставьте отзыв от них, а также посещенных вами достопримечательностях
-        </p>
+        <div class="header-page__title-block">
+            <h1 class="header-page__title-form">
+                Оставьте свой отзыв
+            </h1>
+            <p class="header-page__paragraph-form">
+                Помогите нашим отелям стать лучше! Оставьте отзыв от них, а также посещенных вами достопримечательностях
+            </p>
+        </div>
     </header>
 
     <main class="form-page">
         <form class="form-page__form form-block" action="https://echo.htmlacademy.ru/">
             <fieldset class="form-block__name form-name">
                 <h2 class="form-name__title">Представьтесь:</h2>
-                <ul class="form-name__list">
+                <ul class="form-name__list list">
                     <li class="form-name__item">
                         <label class="form-name__label" for="name">Имя*:</label>
-                        <input class="form-name__input" id="name" type="text" placeholder="Петр" required>
+                        <input class="form-name__input input-text" id="name" type="text" placeholder="Петр" required>
                     </li>
                     <li class="form-name__item">
                         <label class="form-name__label" for="surname">Фамилия*:</label>
-                        <input class="form-name__input" id="surname" type="text" placeholder="Иванов" required>
+                        <input class="form-name__input input-text" id="surname" type="text" placeholder="Иванов" required>
                     </li>
                     <li class="form-name__item">
                         <label class="form-name__label" for="patronymic">Отчество:</label>
-                        <input class="form-name__input" id="patronymic" type="text" placeholder="Александрович">
+                        <input class="form-name__input input-text" id="patronymic" type="text" placeholder="Александрович">
                     </li>
                 </ul>
             </fieldset>
@@ -60,14 +62,14 @@
                 <h2 class="form-contacts__title">
                     Контактная информация:
                 </h2>
-                <ul class="form-contacts__list">
+                <ul class="form-contacts__list list">
                     <li class="form-contacts__item">
                         <label class="form-contacts__label" for="phone">Контактный телефон*:</label>
-                        <input class="form-contacts__input" id="phone" type="tel" placeholder="Введите телефон" required pattern="">
+                        <input class="form-contacts__input input-phone" id="phone" type="tel" placeholder="Введите телефон" required pattern="">
                     </li>
                     <li class="form-contacts__item">
                         <label class="form-contacts__label" for="email">Контактный телефон*:</label>
-                        <input class="form-contacts__input" id="email" type="email" placeholder="Введите e-mail" required>
+                        <input class="form-contacts__input input-email" id="email" type="email" placeholder="Введите e-mail" required>
                     </li>
                 </ul>
             </fieldset>
@@ -75,75 +77,73 @@
                 <h2 class="form-rating__title">
                     Ваше общее впечатление:
                 </h2>
-                <ul class="form-rating__list">
-                    <li class="form-list__item">
-                        <input class="form-rating__radio" id="radio-1" type="radio" name="radio-rating" value="Скорее положительное" checked>
+                <ul class="form-rating__list list">
+                    <li class="form-rating__item">
+                        <input class="form-rating__input input-radio" id="radio-1" type="radio" name="radio-rating" value="Скорее положительное" checked>
                         <label class="form-rating__label" for="radio-1">Скорее положительное</label>
                     </li>
-                    <li class="form-list__item">
-                        <input class="form-rating__radio" id="radio-2" type="radio" name="radio-rating" value="Скорее отрицательное">
+                    <li class="form-rating__item">
+                        <input class="form-rating__input input-radio" id="radio-2" type="radio" name="radio-rating" value="Скорее отрицательное">
                         <label class="form-rating__label" for="radio-2">Скорее отрицательное</label>
                     </li>
-                    <li class="form-list__item">
-                        <input class="form-rating__radio" id="radio-3" type="radio" name="radio-rating" value="Затрудняюсь ответить">
+                    <li class="form-rating__item">
+                        <input class="form-rating__input input-radio" id="radio-3" type="radio" name="radio-rating" value="Затрудняюсь ответить">
                         <label class="form-rating__label" for="radio-3">Затрудняюсь ответить</label>
                     </li>
                 </ul>
             </fieldset>
             <fieldset class="form-block__visited form-visited">
                 <h2 class="form-visited__title">Посещенные достопримечательности:</h2>
-                <ul class="form-visited__list">
+                <ul class="form-visited__list list">
                     <li class="form-visited__item">
-                        <input class="form-visited__chechbox" id="check-1" type="checkbox" name="Мост Дьявола" checked>
+                        <input class="form-visited__input input-checkbox" id="check-1" type="checkbox" name="Мост Дьявола" checked>
                         <label class="form-visited__label" for="check-1">Мост Дьявола</label>
                     </li>
                     <li class="form-visited__item">
-                        <input class="form-visited__chechbox" id="check-2" type="checkbox" name="Гора-колокол" checked>
+                        <input class="form-visited__input input-checkbox" id="check-2" type="checkbox" name="Гора-колокол" checked>
                         <label class="form-visited__label" for="check-2">Гора-колокол</label>
                     </li>
                     <li class="form-visited__item">
-                        <input class="form-visited__chechbox" id="check-3" type="checkbox" name="Слайд-парк" checked>
+                        <input class="form-visited__input input-checkbox" id="check-3" type="checkbox" name="Слайд-парк" checked>
                         <label class="form-visited__label" for="check-3">Слайд-парк</label>
                     </li>
                     <li class="form-visited__item">
-                        <input class="form-visited__chechbox" id="check-4" type="checkbox" name="Красные скалы">
+                        <input class="form-visited__input input-checkbox" id="check-4" type="checkbox" name="Красные скалы">
                         <label class="form-visited__label" for="check-4">Красные скалы</label>
                     </li>
                 </ul>
             </fieldset>
-            <div class="form-block__feeling feeling">
+            <fieldset class="form-block__feeling feeling">
                 <h2 class="feeling__title">
                     Опишите свои эмоции:
                 </h2>
                 <textarea class="feeling__letter" placeholder="Опишите подробно все свои восторги" required></textarea>
-            </div>
+            </fieldset>
             <button class="form-block__button">Отправить отзыв</button>
         </form>
     </main>
 
     <footer class="footer-page">
-        <div class="footer-page__block footer-block">
-            <p class="footer-block__hashtag">
-                #visitsedona
-            </p>
-            <ul class="footer-block__list social-list">
-                <li class="social-list__item">
-                    <a class="social-list__item--twitter" href="we-in-twit.com" aria-label="Ссылка на нас в твиттере">
-                    </a>
-                </li>
-                <li class="social-list__item">
-                    <a class="social-list__item--facebook" href="we-in-fb.com" aria-label="Ссылка на нас в фейсбуке">
-                    </a>
-                </li>
-                <li class="social-list__item">
-                    <a class="social-list__item--youtube" href="we-in-yt.com" aria-label="Ссылка на нас в ютубе">
-                    </a>
-                </li>
-            </ul>
-            <a class="footer-block__academy" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Ссылка на сайт HTML Academy">
+        <p class="footer-page__hashtag">
+            #visitsedona
+        </p>
+        <ul class="footer-page__list social-list list">
+            <li class="social-list__item">
+                <a class="social-list__link-twit" href="we-in-twit.com" aria-label="Ссылка на нас в твиттере">
+                </a>
+            </li>
+            <li class="social-list__item">
+                <a class="social-list__link-fb" href="we-in-fb.com" aria-label="Ссылка на нас в фейсбуке">
+                </a>
+            </li>
+            <li class="social-list__item">
+                <a class="social-list__link-ytb" href="we-in-yt.com" aria-label="Ссылка на нас в ютубе">
+                </a>
+            </li>
+        </ul>
+        <a class="footer-page__link-academy" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Ссылка на сайт HTML Academy">
                 Разработано
             </a>
-        </div>
     </footer>
 </body>
 
