--- a/source/photo.html
+++ b/source/photo.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Sedona фото и видео</title>
+    <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
