Добавил свг в кнопки в навигации, добавил логотип, ссылку, в ней класс, с адресом на главную

--- a/source/form.html
+++ b/source/form.html
@@ -2,150 +2,169 @@
 <html lang="ru">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Sedona форма отзыва</title>
-    <link href="css/style.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <title>Sedona форма отзыва</title>
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
-    <header class="header-page">
-        <nav class="nav-main">
-            <ul class="nav-main__list navigation list">
-                <li class="navigation__item">
-                    <a class="navigation__link" href="#">главная</a>
-                </li>
-                <li class="navigation__item">
-                    <a class="navigation__link" href="#">фото и видео</a>
-                </li>
-                <li class="navigation__item">
-                    <a class="navigation__link" href="#">форма отзыва</a>
-                </li>
-                <li class="navigation__item">
-                    <a class="navigation__link" href="#">html academy</a>
-                </li>
-            </ul>
-            <button class="nav-main__button">
-            </button>
-            <a>
-                <img class="nav-main__logo header-logo" src="main-logo.jpg" alt="Изображение логотипа Sedona" width="50" height="50">
-            </a>
-        </nav>
-        <div class="header-page__title-block">
-            <h1 class="header-page__title-form">
-                Оставьте свой отзыв
-            </h1>
-            <p class="header-page__paragraph-form">
-                Помогите нашим отелям стать лучше! Оставьте отзыв от них, а также посещенных вами достопримечательностях
-            </p>
-        </div>
-    </header>
+  <header class="header-page">
+    <nav class="nav-main">
+      <ul class="nav-main__list navigation list">
+        <li class="navigation__item">
+          <a class="navigation__link" href="#">главная</a>
+        </li>
+        <li class="navigation__item">
+          <a class="navigation__link" href="#">фото и видео</a>
+        </li>
+        <li class="navigation__item">
+          <a class="navigation__link" href="#">форма отзыва</a>
+        </li>
+        <li class="navigation__item">
+          <a class="navigation__link" href="#">html academy</a>
+        </li>
+      </ul>
+      <a class="nav-main__logo-link" href="index.html">
+        <img class="nav-main__logo-image header-logo" src="img/logo-sedona-mobile.svg" alt="Изображение логотипа Sedona"
+          width="102" height="83">
+      </a>
+      <button class="nav-main__button-open">
+        <svg class="nav-main__svg-open" fill="#81b3d2" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22.928px" height="21.982px" viewBox="0 0 22.928 21.982" enable-background="new 0 0 22.928 21.982" xml:space="preserve">
+          <g>
+            <rect width="22.928" height="3.964"/>
+            <rect y="9.009" width="22.928" height="3.964"/>
+            <rect y="18.018" width="22.928" height="3.964"/>
+          </g>
+        </svg>
+      </button>
+      <button class="nav-main__button-close">
+        <svg class="nav-main__svg-close" fill="#fff" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22.199px" height="22.199px" viewBox="0 0 22.199 22.199" enable-background="new 0 0 22.199 22.199" xml:space="preserve">
+          <polygon points="22.199,2.804 19.396,0 11.1,8.297 2.804,0 0,2.803 8.297,11.1 0,19.396 2.803,22.199 11.1,13.902 19.396,22.199 22.199,19.396 13.903,11.1 "/>
+        </svg>
+      </button>
+    </nav>
+    <div class="header-page__title-block">
+      <h1 class="header-page__title-form">
+        Оставьте свой отзыв
+      </h1>
+      <p class="header-page__paragraph-form">
+        Помогите нашим отелям стать лучше! Оставьте отзыв от них, а также посещенных вами достопримечательностях
+      </p>
+    </div>
+  </header>
 
-    <main class="form-page">
-        <form class="form-page__form form-block" action="https://echo.htmlacademy.ru/">
-            <fieldset class="form-block__name form-name">
-                <h2 class="form-name__title">Представьтесь:</h2>
-                <ul class="form-name__list list">
-                    <li class="form-name__item">
-                        <label class="form-name__label" for="name">Имя*:</label>
-                        <input class="form-name__input input-text" id="name" type="text" placeholder="Петр" required>
-                    </li>
-                    <li class="form-name__item">
-                        <label class="form-name__label" for="surname">Фамилия*:</label>
-                        <input class="form-name__input input-text" id="surname" type="text" placeholder="Иванов" required>
-                    </li>
-                    <li class="form-name__item">
-                        <label class="form-name__label" for="patronymic">Отчество:</label>
-                        <input class="form-name__input input-text" id="patronymic" type="text" placeholder="Александрович">
-                    </li>
-                </ul>
-            </fieldset>
-            <fieldset class="form-block__contacts form-contacts">
-                <h2 class="form-contacts__title">
-                    Контактная информация:
-                </h2>
-                <ul class="form-contacts__list list">
-                    <li class="form-contacts__item">
-                        <label class="form-contacts__label" for="phone">Контактный телефон*:</label>
-                        <input class="form-contacts__input input-phone" id="phone" type="tel" placeholder="Введите телефон" required pattern="">
-                    </li>
-                    <li class="form-contacts__item">
-                        <label class="form-contacts__label" for="email">Контактный телефон*:</label>
-                        <input class="form-contacts__input input-email" id="email" type="email" placeholder="Введите e-mail" required>
-                    </li>
-                </ul>
-            </fieldset>
-            <fieldset class="form-block__rating form-rating">
-                <h2 class="form-rating__title">
-                    Ваше общее впечатление:
-                </h2>
-                <ul class="form-rating__list list">
-                    <li class="form-rating__item">
-                        <input class="form-rating__input input-radio" id="radio-1" type="radio" name="radio-rating" value="Скорее положительное" checked>
-                        <label class="form-rating__label" for="radio-1">Скорее положительное</label>
-                    </li>
-                    <li class="form-rating__item">
-                        <input class="form-rating__input input-radio" id="radio-2" type="radio" name="radio-rating" value="Скорее отрицательное">
-                        <label class="form-rating__label" for="radio-2">Скорее отрицательное</label>
-                    </li>
-                    <li class="form-rating__item">
-                        <input class="form-rating__input input-radio" id="radio-3" type="radio" name="radio-rating" value="Затрудняюсь ответить">
-                        <label class="form-rating__label" for="radio-3">Затрудняюсь ответить</label>
-                    </li>
-                </ul>
-            </fieldset>
-            <fieldset class="form-block__visited form-visited">
-                <h2 class="form-visited__title">Посещенные достопримечательности:</h2>
-                <ul class="form-visited__list list">
-                    <li class="form-visited__item">
-                        <input class="form-visited__input input-checkbox" id="check-1" type="checkbox" name="Мост Дьявола" checked>
-                        <label class="form-visited__label" for="check-1">Мост Дьявола</label>
-                    </li>
-                    <li class="form-visited__item">
-                        <input class="form-visited__input input-checkbox" id="check-2" type="checkbox" name="Гора-колокол" checked>
-                        <label class="form-visited__label" for="check-2">Гора-колокол</label>
-                    </li>
-                    <li class="form-visited__item">
-                        <input class="form-visited__input input-checkbox" id="check-3" type="checkbox" name="Слайд-парк" checked>
-                        <label class="form-visited__label" for="check-3">Слайд-парк</label>
-                    </li>
-                    <li class="form-visited__item">
-                        <input class="form-visited__input input-checkbox" id="check-4" type="checkbox" name="Красные скалы">
-                        <label class="form-visited__label" for="check-4">Красные скалы</label>
-                    </li>
-                </ul>
-            </fieldset>
-            <fieldset class="form-block__feeling feeling">
-                <h2 class="feeling__title">
-                    Опишите свои эмоции:
-                </h2>
-                <textarea class="feeling__letter" placeholder="Опишите подробно все свои восторги" required></textarea>
-            </fieldset>
-            <button class="form-block__button">Отправить отзыв</button>
-        </form>
-    </main>
-
-    <footer class="footer-page">
-        <p class="footer-page__hashtag">
-            #visitsedona
-        </p>
-        <ul class="footer-page__list social-list list">
-            <li class="social-list__item">
-                <a class="social-list__link-twit" href="we-in-twit.com" aria-label="Ссылка на нас в твиттере">
-                </a>
-            </li>
-            <li class="social-list__item">
-                <a class="social-list__link-fb" href="we-in-fb.com" aria-label="Ссылка на нас в фейсбуке">
-                </a>
-            </li>
-            <li class="social-list__item">
-                <a class="social-list__link-ytb" href="we-in-yt.com" aria-label="Ссылка на нас в ютубе">
-                </a>
-            </li>
+  <main class="form-page">
+    <form class="form-page__form form-block" action="https://echo.htmlacademy.ru/">
+      <fieldset class="form-block__name form-name">
+        <h2 class="form-name__title">Представьтесь:</h2>
+        <ul class="form-name__list list">
+          <li class="form-name__item">
+            <label class="form-name__label" for="name">Имя*:</label>
+            <input class="form-name__input input-text" id="name" type="text" placeholder="Петр" required>
+          </li>
+          <li class="form-name__item">
+            <label class="form-name__label" for="surname">Фамилия*:</label>
+            <input class="form-name__input input-text" id="surname" type="text" placeholder="Иванов" required>
+          </li>
+          <li class="form-name__item">
+            <label class="form-name__label" for="patronymic">Отчество:</label>
+            <input class="form-name__input input-text" id="patronymic" type="text" placeholder="Александрович">
+          </li>
         </ul>
-        <a class="footer-page__link-academy" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Ссылка на сайт HTML Academy">
-                Разработано
-            </a>
-    </footer>
+      </fieldset>
+      <fieldset class="form-block__contacts form-contacts">
+        <h2 class="form-contacts__title">
+          Контактная информация:
+        </h2>
+        <ul class="form-contacts__list list">
+          <li class="form-contacts__item">
+            <label class="form-contacts__label" for="phone">Контактный телефон*:</label>
+            <input class="form-contacts__input input-phone" id="phone" type="tel" placeholder="Введите телефон" required
+              pattern="">
+          </li>
+          <li class="form-contacts__item">
+            <label class="form-contacts__label" for="email">Контактный телефон*:</label>
+            <input class="form-contacts__input input-email" id="email" type="email" placeholder="Введите e-mail"
+              required>
+          </li>
+        </ul>
+      </fieldset>
+      <fieldset class="form-block__rating form-rating">
+        <h2 class="form-rating__title">
+          Ваше общее впечатление:
+        </h2>
+        <ul class="form-rating__list list">
+          <li class="form-rating__item">
+            <input class="form-rating__input input-radio" id="radio-1" type="radio" name="radio-rating"
+              value="Скорее положительное" checked>
+            <label class="form-rating__label" for="radio-1">Скорее положительное</label>
+          </li>
+          <li class="form-rating__item">
+            <input class="form-rating__input input-radio" id="radio-2" type="radio" name="radio-rating"
+              value="Скорее отрицательное">
+            <label class="form-rating__label" for="radio-2">Скорее отрицательное</label>
+          </li>
+          <li class="form-rating__item">
+            <input class="form-rating__input input-radio" id="radio-3" type="radio" name="radio-rating"
+              value="Затрудняюсь ответить">
+            <label class="form-rating__label" for="radio-3">Затрудняюсь ответить</label>
+          </li>
+        </ul>
+      </fieldset>
+      <fieldset class="form-block__visited form-visited">
+        <h2 class="form-visited__title">Посещенные достопримечательности:</h2>
+        <ul class="form-visited__list list">
+          <li class="form-visited__item">
+            <input class="form-visited__input input-checkbox" id="check-1" type="checkbox" name="Мост Дьявола" checked>
+            <label class="form-visited__label" for="check-1">Мост Дьявола</label>
+          </li>
+          <li class="form-visited__item">
+            <input class="form-visited__input input-checkbox" id="check-2" type="checkbox" name="Гора-колокол" checked>
+            <label class="form-visited__label" for="check-2">Гора-колокол</label>
+          </li>
+          <li class="form-visited__item">
+            <input class="form-visited__input input-checkbox" id="check-3" type="checkbox" name="Слайд-парк" checked>
+            <label class="form-visited__label" for="check-3">Слайд-парк</label>
+          </li>
+          <li class="form-visited__item">
+            <input class="form-visited__input input-checkbox" id="check-4" type="checkbox" name="Красные скалы">
+            <label class="form-visited__label" for="check-4">Красные скалы</label>
+          </li>
+        </ul>
+      </fieldset>
+      <fieldset class="form-block__feeling feeling">
+        <h2 class="feeling__title">
+          Опишите свои эмоции:
+        </h2>
+        <textarea class="feeling__letter" placeholder="Опишите подробно все свои восторги" required></textarea>
+      </fieldset>
+      <button class="form-block__button">Отправить отзыв</button>
+    </form>
+  </main>
+
+  <footer class="footer-page">
+    <p class="footer-page__hashtag">
+      #visitsedona
+    </p>
+    <ul class="footer-page__list social-list list">
+      <li class="social-list__item">
+        <a class="social-list__link-twit" href="we-in-twit.com" aria-label="Ссылка на нас в твиттере">
+        </a>
+      </li>
+      <li class="social-list__item">
+        <a class="social-list__link-fb" href="we-in-fb.com" aria-label="Ссылка на нас в фейсбуке">
+        </a>
+      </li>
+      <li class="social-list__item">
+        <a class="social-list__link-ytb" href="we-in-yt.com" aria-label="Ссылка на нас в ютубе">
+        </a>
+      </li>
+    </ul>
+    <a class="footer-page__link-academy" href="https://htmlacademy.ru/intensive/adaptive"
+      aria-label="Ссылка на сайт HTML Academy">
+      Разработано
+    </a>
+  </footer>
 </body>
 
 </html>
