--- a/source/index.html
+++ b/source/index.html
@@ -2,122 +2,138 @@
 <html lang="ru">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Sedona главная страница</title>
-    <link href="css/style.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <title>Sedona главная страница</title>
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
-    <header class="header-page">
-        <nav class="nav-main">
-            <ul class="nav-main__list navigation list">
-                <li class="navigation__item">
-                    <a class="navigation__link" href="#">главная</a>
-                </li>
-                <li class="navigation__item">
-                    <a class="navigation__link" href="#">фото и видео</a>
-                </li>
-                <li class="navigation__item">
-                    <a class="navigation__link" href="#">форма отзыва</a>
-                </li>
-                <li class="navigation__item">
-                    <a class="navigation__link" href="#">html academy</a>
-                </li>
-            </ul>
-            <button class="nav-main__button">
-            </button>
-            <a>
-                <img class="nav-main__logo header-logo" src="main-logo.jpg" alt="Изображение логотипа Sedona" width="50" height="50">
-            </a>
-        </nav>
-        <div class="header-page__title-block">
-            <h1 class="header-page__title-index">
-                Седона - небольшой городок в Аризоне, заслуживающий большего!
-            </h1>
-            <p class="header-page__paragraph-index">
-                Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!
-            </p>
+  <header class="header-page">
+    <nav class="nav-main">
+      <ul class="nav-main__list navigation list">
+        <li class="navigation__item">
+          <a class="navigation__link" href="#">главная</a>
+        </li>
+        <li class="navigation__item">
+          <a class="navigation__link" href="#">фото и видео</a>
+        </li>
+        <li class="navigation__item">
+          <a class="navigation__link" href="#">форма отзыва</a>
+        </li>
+        <li class="navigation__item">
+          <a class="navigation__link" href="#">html academy</a>
+        </li>
+      </ul>
+      <a class="nav-main__logo-link" href="index.html">
+        <img class="nav-main__logo-image header-logo" src="img/logo-sedona-mobile.svg" alt="Изображение логотипа Sedona"
+          width="102" height="83">
+      </a>
+      <button class="nav-main__button-open">
+        <svg class="nav-main__svg-open" fill="#81b3d2" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22.928px" height="21.982px" viewBox="0 0 22.928 21.982" enable-background="new 0 0 22.928 21.982" xml:space="preserve">
+          <g>
+            <rect width="22.928" height="3.964"/>
+            <rect y="9.009" width="22.928" height="3.964"/>
+            <rect y="18.018" width="22.928" height="3.964"/>
+          </g>
+        </svg>
+      </button>
+      <button class="nav-main__button-close">
+        <svg class="nav-main__svg-close" fill="#fff" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22.199px" height="22.199px" viewBox="0 0 22.199 22.199" enable-background="new 0 0 22.199 22.199" xml:space="preserve">
+          <polygon points="22.199,2.804 19.396,0 11.1,8.297 2.804,0 0,2.803 8.297,11.1 0,19.396 2.803,22.199 11.1,13.902 19.396,22.199 22.199,19.396 13.903,11.1 "/>
+        </svg>
+      </button>
+    </nav>
+    <div class="header-page__title-block">
+      <h1 class="header-page__title-index">
+        Седона - небольшой городок в Аризоне, заслуживающий большего!
+      </h1>
+      <p class="header-page__paragraph-index">
+        Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!
+      </p>
+    </div>
+  </header>
+
+  <main class="main-page">
+    <ul class="main-page advantage-list list">
+      <li class="advantage-list__item advantage-1">
+        <div class="advantage-1__block">
+          <h2 class="advantage-1__title">Настоящий городок</h2>
+          <span class="advantage-1__number">--№1--</span>
+          <p>Седона не аттракцион для туристов, в нем течет своя жизнь</p>
         </div>
-    </header>
+        <img src="image.jpg" alt="Фото города" width="50" height="50">
+      </li>
+      <li class="advantage-list__item housing">
+        <h2 class="housing__title">Жилье</h2>
+        <p class="housing__paragraph">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+      </li>
+      <li class="advantage-list__item souvenirs">
+        <h2 class="souvenirs__title">Сувениры</h2>
+        <p class="souvenirs__paragraph">Не только китайского, но и местного производства!</p>
+      </li>
+      <li class="advantage-list__item food">
+        <h2 class="food__title">Еда</h2>
+        <p class="food__paragraph">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+      </li>
+      <li class="advantage-list__item advantage-2">
+        <div class="advantage-2__block">
+          <h2 class="advantage-2__title">Там есть мост дьявола</h2>
+          <span class="advantage-2__number">--№2--</span>
 
-    <main class="main-page">
-        <ul class="main-page advantage-list list">
-            <li class="advantage-list__item advantage-1">
-                <div class="advantage-1__block">
-                    <h2 class="advantage-1__title">Настоящий городок</h2>
-                    <span class="advantage-1__number">--№1--</span>
-                    <p>Седона не аттракцион для туристов, в нем течет своя жизнь</p>
-                </div>
-                <img src="image.jpg" alt="Фото города" width="50" height="50">
-            </li>
-            <li class="advantage-list__item housing">
-                <h2 class="housing__title">Жилье</h2>
-                <p class="housing__paragraph">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-            </li>
-            <li class="advantage-list__item souvenirs">
-                <h2 class="souvenirs__title">Сувениры</h2>
-                <p class="souvenirs__paragraph">Не только китайского, но и местного производства!</p>
-            </li>
-            <li class="advantage-list__item food">
-                <h2 class="food__title">Еда</h2>
-                <p class="food__paragraph">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-            </li>
-            <li class="advantage-list__item advantage-2">
-                <div class="advantage-2__block">
-                    <h2 class="advantage-2__title">Там есть мост дьявола</h2>
-                    <span class="advantage-2__number">--№2--</span>
+          <p class="advantage-2__paragraph">Да, по нему можно пройти! Если вы оселитесь, конечно</p>
+        </div>
+        <img class="advantage-2__image" src="Каньон.jpg" alt="фотография каньона" width="50" height="50">
+      </li>
+      <li class="advantage-list__item advantage-3">
+        <h2 class="advantage-3__title">Небольшая площадь</h2>
+        <span class="advantage-3__number">--№3--</span>
+        <p class="advantage-3__paragraph">Все интересные места находятся очень близко</p>
+      </li>
+      <li class="advantage-list__item advantage-4">
+        <h2 class="advantage-4__title">Красивая дорога</h2>
+        <span class="advantage-4__number">--№4--</span>
+        <p class="advantage-4__paragraph">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+      </li>
+      <li class="advantage-list__item advantage-5">
+        <h2 class="advantage-5__title">Мало туристов</h2>
+        <span class="advantage-5__number">--№5--</span>
+        <p class="advantage-5__paragraph">Большинство едет в Гранд Каньон и толпится там</p>
+      </li>
+    </ul>
+    <section class="main-page__find-hotel find-hotel">
+      <p class="find-hotel__title">Заинтересовались?</p>
+      <p class="find-hotel__paragraph">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения
+        гостиниц в Седоне</p>
+      <a class="find-hotel__button" href="find-hotel.html">Найти гостиницу</a>
+    </section>
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d456713.36206752557!2d-112.08681527711245!3d34.91377402507952!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1563191067139!5m2!1sru!2sru"
+      width="320" height="300" style="border:0" allowfullscreen></iframe>
+  </main>
 
-                    <p class="advantage-2__paragraph">Да, по нему можно пройти! Если вы оселитесь, конечно</p>
-                </div>
-                <img class="advantage-2__image" src="Каньон.jpg" alt="фотография каньона" width="50" height="50">
-            </li>
-            <li class="advantage-list__item advantage-3">
-                <h2 class="advantage-3__title">Небольшая площадь</h2>
-                <span class="advantage-3__number">--№3--</span>
-                <p class="advantage-3__paragraph">Все интересные места находятся очень близко</p>
-            </li>
-            <li class="advantage-list__item advantage-4">
-                <h2 class="advantage-4__title">Красивая дорога</h2>
-                <span class="advantage-4__number">--№4--</span>
-                <p class="advantage-4__paragraph">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-            </li>
-            <li class="advantage-list__item advantage-5">
-                <h2 class="advantage-5__title">Мало туристов</h2>
-                <span class="advantage-5__number">--№5--</span>
-                <p class="advantage-5__paragraph">Большинство едет в Гранд Каньон и толпится там</p>
-            </li>
-        </ul>
-        <section class="main-page__find-hotel find-hotel">
-            <p class="find-hotel__title">Заинтересовались?</p>
-            <p class="find-hotel__paragraph">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-            <a class="find-hotel__button" href="find-hotel.html">Найти гостиницу</a>
-        </section>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d456713.36206752557!2d-112.08681527711245!3d34.91377402507952!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1563191067139!5m2!1sru!2sru"
-            width="600" height="450" style="border:0" allowfullscreen></iframe>
-    </main>
-
-    <footer class="footer-page">
-        <p class="footer-page__hashtag">
-            #visitsedona
-        </p>
-        <ul class="footer-page__list social-list list">
-            <li class="social-list__item">
-                <a class="social-list__link-twit" href="we-in-twit.com" aria-label="Ссылка на нас в твиттере">
-                </a>
-            </li>
-            <li class="social-list__item">
-                <a class="social-list__link-fb" href="we-in-fb.com" aria-label="Ссылка на нас в фейсбуке">
-                </a>
-            </li>
-            <li class="social-list__item">
-                <a class="social-list__link-ytb" href="we-in-yt.com" aria-label="Ссылка на нас в ютубе">
-                </a>
-            </li>
-        </ul>
-        <a class="footer-page__link-academy" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Ссылка на сайт HTML Academy">
-              Разработано
-          </a>
-    </footer>
+  <footer class="footer-page">
+    <p class="footer-page__hashtag">
+      #visitsedona
+    </p>
+    <ul class="footer-page__list social-list list">
+      <li class="social-list__item">
+        <a class="social-list__link-twit" href="we-in-twit.com" aria-label="Ссылка на нас в твиттере">
+        </a>
+      </li>
+      <li class="social-list__item">
+        <a class="social-list__link-fb" href="we-in-fb.com" aria-label="Ссылка на нас в фейсбуке">
+        </a>
+      </li>
+      <li class="social-list__item">
+        <a class="social-list__link-ytb" href="we-in-yt.com" aria-label="Ссылка на нас в ютубе">
+        </a>
+      </li>
+    </ul>
+    <a class="footer-page__link-academy" href="https://htmlacademy.ru/intensive/adaptive"
+      aria-label="Ссылка на сайт HTML Academy">
+      Разработано
+    </a>
+  </footer>
 </body>
 
 </html>
